--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -53,7 +53,7 @@
         "env-cmd": "10.1.0",
         "js-cookie": "3.0.5",
         "lodash": "4.17.21",
-        "ms": "2.1.3",
+        "ms": "3.0.0-canary.1",
         "postcss": "8.4.35",
         "postcss-loader": "8.1.1",
         "posthog-js": "1.116.2",
