--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -26,11 +26,6 @@ jobs:
                   registry-url: 'https://npm.pkg.github.com'
                   scope: '@nangohq'
             - run: npm run build:hosted
-            - name: Configure npmrc
-              run: |
-                  cat << EOF > .npmrc
-                  @nangohq:registry=https://npm.pkg.github.com/
-                  //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
             - name: Publish the shared package
               working-directory: packages/shared
               env:
@@ -38,7 +33,7 @@ jobs:
               run: |
                   GIT_HASH=$(git rev-parse HEAD)
                   npm run build
-                  npm version 0.0.1-$GIT_HASH --ignore-scripts
+                  npm version 0.0.1-$GIT_HASH --workspaces-update=false
                   npm publish --ignore-scripts
             - name: Publish the cli
               working-directory: packages/cli
@@ -47,7 +42,7 @@ jobs:
               run: |
                   GIT_HASH=$(git rev-parse HEAD)
                   npm run build
-                  npm version 0.0.1-$GIT_HASH --ignore-scripts
+                  npm version 0.0.1-$GIT_HASH --workspaces-update=false
                   npm publish --ignore-scripts
             - name: Install the cli from the github package registry
               env:
