--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -42,7 +42,7 @@ jobs:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   GIT_HASH=$(git rev-parse HEAD)
-                  npm install @nangohq/shared@0.0.1-$GIT_HASH
+                  jq '.dependencies["@nangohq/shared"] = "0.0.1-'$GIT_HASH'"' packages/cli/package.json > temp.json && mv temp.json packages/cli/package.json
                   npm run build
                   npm version 0.0.1-$GIT_HASH --workspaces-update=false
                   npm publish --ignore-scripts
