--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -26,31 +26,22 @@ jobs:
                   registry-url: 'https://npm.pkg.github.com'
                   scope: '@nangohq'
                   always-auth: true
-            - run: npm run build:hosted
-            - name: Publish the shared package
-              working-directory: packages/shared
+            - name: Publish npm packages to the github registry
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              shell: bash
               run: |
-                  GIT_HASH=$(git rev-parse HEAD)
-                  npm run build
-                  npm version 0.0.1-$GIT_HASH --workspaces-update=false
-                  npm publish --ignore-scripts
-            - name: Publish the cli
-              working-directory: packages/cli
-              env:
-                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
-                  GIT_HASH=$(git rev-parse HEAD)
-                  jq '.dependencies["@nangohq/shared"] = "0.0.1-'$GIT_HASH'"' package.json > temp.json && mv temp.json package.json
-                  npm install
-                  npm run build
-                  npm version 0.0.1-$GIT_HASH --workspaces-update=false
-                  npm publish --ignore-scripts
+                  GIT_HASH=$(git rev-parse --short HEAD)
+                  # publish all before bumping to an alternate version
+                  npm publish -w packages/node
+                  npm publish -w packages/shared
+                  npm publish -w packages/cli
+                  npm publish -w packages/frontend
+                  bash ./scripts/publish.sh 0.0.1-$GIT_HASH true
             - name: Install the cli from the github package registry
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                  GIT_HASH=$(git rev-parse HEAD)
+                  GIT_HASH=$(git rev-parse --short HEAD)
                   npm install nango@0.0.1-$GIT_HASH
                   npx nango version --debug
