--- a/.env.example
+++ b/.env.example
@@ -70,6 +70,11 @@ NANGO_TELEMETRY_SDK=false
 DEFAULT_GITHUB_CLIENT_ID=
 DEFAULT_GITHUB_CLIENT_SECRET=
 
+# ----- Logs
+NANGO_LOGS_ES_URL="http://localhost:9500"
+NANGO_LOGS_ES_USER=""
+NANGO_LOGS_ES_PWD=""
+
 # Hosted Auth Configuration
 WORKOS_API_KEY=
 WORKOS_CLIENT_ID=
