--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -14,6 +14,9 @@
             "path": "packages/jobs"
         },
         {
+            "path": "packages/logs"
+        },
+        {
             "path": "packages/node-client"
         },
         {
