--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -19,7 +19,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Build the docker-compose stack
-              run: docker-compose -f ./packages/cli/docker/docker-compose.yaml --project-directory . up -d
+              run: docker compose -f ./packages/cli/docker/docker-compose.yaml --project-directory . up -d
 
             - name: Sleep
               uses: jakejarvis/wait-action@master
