--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -35,8 +35,11 @@ jobs:
                   npm run build:hosted
                   # publish all before bumping to an alternate version
                   npm publish -w packages/node-client
+                  npm i
                   npm publish -w packages/shared
+                  npm i
                   npm publish -w packages/cli
+                  npm i
                   npm publish -w packages/frontend
                   bash ./scripts/publish.sh 0.0.1-$GIT_HASH true
             - name: Install the cli from the github package registry
