--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -46,5 +46,5 @@ jobs:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   GIT_HASH=$(git rev-parse HEAD)
-                  npm install nangohq@cli@0.0.1-$GIT_HASH
+                  npm install nangohq/cli@0.0.1-$GIT_HASH
                   npx nango version --debug
