--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -46,7 +46,7 @@ jobs:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   GIT_HASH=$(git rev-parse HEAD)
-                  mkdir nango-cli-test && cd nango-cli-test
+                  cd ../ && mkdir nango-cli-test && cd nango-cli-test
                   npm init -y
                   npm install @nangohq/cli@0.0.1-$GIT_HASH
                   npx nango version --debug
