[nan-668] local install and use npx

--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -48,7 +48,7 @@ jobs:
                   GIT_HASH=$(git rev-parse HEAD)
                   mkdir nango-cli-test && cd nango-cli-test
                   npm init -y
-                  npm -g install @nangohq/cli@0.0.1-$GIT_HASH
-                  nango version --debug
-                  nango init --debug
-                  nango generate --debug
+                  npm install @nangohq/cli@0.0.1-$GIT_HASH
+                  npx nango version --debug
+                  npx nango init --debug
+                  npx nango generate --debug
