[nan-668] ignore mode

--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -14,6 +14,8 @@ concurrency:
 jobs:
     publish-and-test:
         runs-on: ubuntu-latest
+        env:
+            NANGO_CLI_UPGRADE_MODE: ignore
         permissions:
             contents: read
             packages: write
