--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -12,10 +12,8 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    publish-and-test:
+    publish:
         runs-on: ubuntu-latest
-        env:
-            NANGO_CLI_UPGRADE_MODE: ignore
         permissions:
             contents: read
             packages: write
@@ -43,12 +41,25 @@ jobs:
               run: |
                   jq '.name = "@nangohq/cli"' package.json > temp.json && mv temp.json package.json
                   npm publish --access public
+    verify:
+        runs-on: ubuntu-latest
+        env:
+            NANGO_CLI_UPGRADE_MODE: ignore
+        permissions:
+            contents: read
+            packages: write
+        steps:
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: '18.x'
+                  registry-url: 'https://npm.pkg.github.com'
+                  scope: '@nangohq'
+                  always-auth: true
             - name: Install the cli from the github package registry
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   GIT_HASH=$(git rev-parse HEAD)
-                  mkdir nango-cli-test && cd nango-cli-test
                   npm init -y
                   npm install @nangohq/cli@0.0.1-$GIT_HASH
                   VERSION_OUTPUT=$(npx nango version)
