--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -17,6 +17,8 @@ jobs:
         permissions:
             contents: read
             packages: write
+        outputs:
+            GIT_HASH: ${{ steps.publish_step.hash }}
         steps:
             - uses: actions/checkout@v4
 
@@ -26,7 +28,8 @@ jobs:
                   registry-url: 'https://npm.pkg.github.com'
                   scope: '@nangohq'
                   always-auth: true
-            - name: Publish npm packages to the github registry
+            - id: publish_step
+              name: Publish npm packages to the github registry
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               shell: bash
@@ -34,6 +37,7 @@ jobs:
               run: |
                   GIT_HASH=$(git rev-parse HEAD)
                   bash ./scripts/publish.sh 0.0.1-$GIT_HASH
+                  echo "hash=${GIT_HASH}" >> "$GITHUB_OUTPUT"
             - name: Publish the cli privately under the correct scope
               working-directory: packages/cli
               env:
@@ -43,8 +47,10 @@ jobs:
                   npm publish --access public
     verify:
         runs-on: ubuntu-latest
+        needs: publish
         env:
             NANGO_CLI_UPGRADE_MODE: ignore
+            GIT_HASH: ${{ needs.publish.outputs.GIT_HASH }}
         permissions:
             contents: read
             packages: write
@@ -59,7 +65,6 @@ jobs:
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                  GIT_HASH=$(git rev-parse HEAD)
                   npm init -y
                   npm install @nangohq/cli@0.0.1-$GIT_HASH
                   VERSION_OUTPUT=$(npx nango version)
