--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1766,7 +1766,7 @@ snowflake:
     refresh_params:
         grant_type: refresh_token
     proxy:
-        base_url: https://secure.splitwise.com
+        base_url: https://{connectionConfig.snowflake_account_url}
     docs: https://docs.nango.dev/integrations/all/snowflake
 splitwise:
     categories:
