feat(integrations): api support for snowflake (#1962)
## Describe your changes

- Added configuration for snowflake in providers.yaml
- Added snowflake to docs-v2.
- Added snowflake pages for Supported API groups in mint.json.
- Added snowflake SVG file in template-logos folder.
- Consolidate Snowflake docs pages

## Issue ticket number and link
EXT-42
## test
This provider has been used successfully in local development to connect
to Snowflake after authorizing using Nango.

The documentation update was reviewed using `npm run docs` and verifying
on localhost.

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1752,6 +1752,22 @@ smugmug:
     proxy:
         base_url: https://www.smugmug.com
     docs: https://docs.nango.dev/integrations/all/smugmug
+snowflake:
+    categories:
+        - dev-tools
+    auth_mode: OAUTH2
+    authorization_url: https://${connectionConfig.snowflake_account_url}/oauth/authorize
+    token_url: https://${connectionConfig.snowflake_account_url}/oauth/token-request
+    token_request_auth_method: basic
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://{connectionConfig.snowflake_account_url}
+    docs: https://docs.nango.dev/integrations/all/snowflake
 splitwise:
     categories:
         - payment
