[nan-716] build shared

--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -60,10 +60,14 @@ jobs:
                   echo "hash=${GIT_HASH}" >> "$GITHUB_OUTPUT"
                   bash ./scripts/publish.sh 0.0.1-$GIT_HASH
             - name: Publish the cli privately under the correct scope
-              working-directory: packages/cli
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
+                  npm i
+                  pushd ./packages/shared
+                  npm run build
+                  popd
+                  cd ./packages/cli
                   jq '.name = "@nangohq/cli"' package.json > temp.json && mv temp.json package.json
                   npm publish --access public
     verify:
