[nan-716] ignore scripts

--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -67,7 +67,7 @@ jobs:
                   npm run build:hosted
                   cd ./packages/cli
                   jq '.name = "@nangohq/cli"' package.json > temp.json && mv temp.json package.json
-                  npm publish --access public
+                  npm publish --access public --ignore-scripts
     verify:
         runs-on: ubuntu-latest
         needs: publish
