--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -65,9 +65,10 @@ jobs:
               run: |
                   npm i
                   npm run build:hosted
-                  cd ./packages/cli
+                  pushd ./packages/cli
                   jq '.name = "@nangohq/cli"' package.json > temp.json && mv temp.json package.json
-                  npm publish --ignore-scripts --access public
+                  popd
+                  npm publish -w packages/cli
     verify:
         runs-on: ubuntu-latest
         needs: publish
