--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -65,10 +65,10 @@ jobs:
               run: |
                   npm i
                   npm run ts-build
-                  pushd ./packages/cli
+                  cd ./packages/cli
                   jq '.name = "@nangohq/cli"' package.json > temp.json && mv temp.json package.json
-                  popd
-                  npm publish -w packages/cli
+                  ls
+                  npm publish
     verify:
         runs-on: ubuntu-latest
         needs: publish
