--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -130,6 +130,15 @@ peopledatalabs:
         query:
             api_key: ${apiKey}
     docs: https://docs.nango.dev/integrations/all/peopledatalabs
+exa:
+    categories:
+        - analytics
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://api.exa.ai
+        query:
+            api_key: ${apiKey}
+    docs: https://docs.nango.dev/integrations/all/exa
 apollo:
     categories:
         - marketing
