--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -136,8 +136,8 @@ exa:
     auth_mode: API_KEY
     proxy:
         base_url: https://api.exa.ai
-        query:
-            api_key: ${apiKey}
+        headers:
+            x-api-key: ${apiKey}
     docs: https://docs.nango.dev/integrations/all/exa
 apollo:
     categories:
