--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -24,5 +24,8 @@
     "devDependencies": {
         "rimraf": "3.0.2",
         "vitest": "1.4.0"
-    }
+    },
+    "files": [
+        "dist/**/*"
+    ]
 }
