--- a/packages/persist/Dockerfile
+++ b/packages/persist/Dockerfile
@@ -15,6 +15,6 @@ COPY packages/utils/ packages/utils/
 COPY package*.json ./
 
 RUN npm pkg delete scripts.prepare
-RUN npm install --omit=dev
+RUN npm ci --omit=dev
 
 CMD [ "node", "/nango/packages/persist/dist/app.js", "80", "dockerized-persist" ]
