--- a/packages/runner/Dockerfile
+++ b/packages/runner/Dockerfile
@@ -15,6 +15,6 @@ COPY packages/runner/ packages/runner/
 COPY package*.json ./
 
 RUN npm pkg delete scripts.prepare
-RUN npm install --omit=dev
+RUN npm ci --omit=dev
 
 CMD [ "node", "/nango/packages/runner/dist/app.js", "80", "dockerized-runner" ]
