--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
         "webapp-build:watch": "tsc -b -w packages/webapp/tsconfig.json",
         "docker-build:unified": "./scripts/build_docker.sh",
         "shared:build": "cd ./packages/shared && npm run build && cd ../..",
-        "build:hosted": "npm i && npm run ts-build && npm run webapp-build:hosted ",
-        "build:staging": "npm i && npm run ts-build && npm run webapp-build:staging",
-        "build:prod": "npm i && npm run ts-build && npm run webapp-build:prod",
-        "build:enterprise": "npm i && npm run ts-build && npm run webapp-build:enterprise",
+        "build:hosted": "npm ci && npm run ts-build && npm run webapp-build:hosted ",
+        "build:staging": "npm ci && npm run ts-build && npm run webapp-build:staging",
+        "build:prod": "npm ci && npm run ts-build && npm run webapp-build:prod",
+        "build:enterprise": "npm ci && npm run ts-build && npm run webapp-build:enterprise",
         "server:dev:watch": "cd ./packages/server && npm run dev",
         "jobs:dev:watch": "npm run dev -w @nangohq/nango-jobs",
         "persist:dev:watch": "npm run dev -w @nangohq/nango-persist",
