--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,7 +20,7 @@
         "build": "tsc && npm run copyfiles",
         "copyfiles": "copyfiles -u 1 lib/templates/* dist",
         "postbuild": "cp `node -p \"require.resolve('@nangohq/shared/dist/sdk/sync.d.ts')\"` './dist/nango-sync.d.ts'",
-        "prepublishOnly": "npm install && npm run build"
+        "prepublishOnly": "npm ci && npm run build"
     },
     "dependencies": {
         "@babel/parser": "^7.22.5",
