--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -20,9 +20,10 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Install Node.js
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
-                  node-version: '18'
+                  cache: 'npm'
+                  node-version-file: '.nvmrc'
 
             - name: Install nango CLI
               run: |
