--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,8 +24,9 @@ jobs:
                   fetch-depth: '0'
 
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
+                  cache: 'npm'
                   node-version: ${{ matrix.node-version }}
             - run: npm run build:hosted
             - run: npm run test:unit
