--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     },
     "devDependencies": {
         "@tsconfig/node18-strictest-esm": "^1.0.1",
-        "@types/node": "^18.7.6",
+        "@types/node": "20.12.2",
         "@typescript-eslint/eslint-plugin": "6.21.0",
         "@typescript-eslint/parser": "6.21.0",
         "concurrently": "^8.0.1",
@@ -90,5 +90,8 @@
         "*.{html,css,json,yaml}": [
             "prettier --write"
         ]
+    },
+    "engines": {
+        "node": ">=18.0.0 || >=20.0.0"
     }
 }
