--- a/packages/persist/package.json
+++ b/packages/persist/package.json
@@ -27,7 +27,7 @@
     },
     "devDependencies": {
         "@types/mock-knex": "^0.4.8",
-        "@types/node": "^18.7.6",
+        "@types/node": "20.12.2",
         "node-fetch": "^3.3.2",
         "typescript": "^5.3.3",
         "vitest": "1.4.0"
