--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -20,8 +20,8 @@
     "dependencies": {
         "@nangohq/shared": "^0.39.18",
         "@nangohq/utils": "file:../utils",
-        "@trpc/client": "^10.44.0",
-        "@trpc/server": "^10.44.0",
+        "@trpc/client": "^10.45.1",
+        "@trpc/server": "^10.45.1",
         "connect-timeout": "^1.9.0",
         "dd-trace": "5.2.0",
         "express": "^4.19.2",
@@ -31,7 +31,7 @@
     },
     "devDependencies": {
         "@types/connect-timeout": "^0.0.39",
-        "@types/node": "^18.7.6",
+        "@types/node": "20.12.2",
         "typescript": "^5.3.3",
         "vitest": "1.4.0"
     }
