--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -70,7 +70,7 @@
         "@types/human-to-cron": "^0.3.0",
         "@types/js-yaml": "^4.0.5",
         "@types/lodash-es": "^4.17.10",
-        "@types/node": "^18.7.6",
+        "@types/node": "20.12.2",
         "@types/parse-link-header": "^2.0.0",
         "@types/uuid": "^9.0.0",
         "typescript": "^5.3.3",
