[nan-644] pack dependency to install it (#1918)
## Describe your changes
Sine the CLI uses shared, the dependencies that shared has need to be
accessible. By using
[bundleDependncies](https://docs.npmjs.com/cli/v10/configuring-npm/package-json#bundledependencies)
we can pack the `utils` package and then shared will use that bundle to
resolve the dependency. Unfortunately, it makes our publish script a bit
more complicated.

1. Pack the `utils` package
2. Change the shared dependency in utils from `file:../utils` to the
packed file

The other option is to _just_ publish utils...

## Issue ticket number and link

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
+    "bundleDependencies": true,
     "scripts": {
         "build": "rimraf ./dist && tsc"
     },
@@ -21,6 +22,10 @@
         "zod": "3.22.4"
     },
     "devDependencies": {
+        "rimraf": "3.0.2",
         "vitest": "1.4.0"
-    }
+    },
+    "files": [
+        "dist/**/*"
+    ]
 }
