Adds Exa API Key (#1986)
## Describe your changes
Adds Exa as an integration https://docs.exa.ai/reference/search
Adds Jotform as an integration

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -130,6 +130,24 @@ peopledatalabs:
         query:
             api_key: ${apiKey}
     docs: https://docs.nango.dev/integrations/all/peopledatalabs
+exa:
+    categories:
+        - analytics
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://api.exa.ai
+        headers:
+            x-api-key: ${apiKey}
+    docs: https://docs.nango.dev/integrations/all/exa
+jotform:
+    categories:
+        - surveys
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://api.jotform.com
+        headers:
+            APIKEY: ${apiKey}
+    docs: https://docs.nango.dev/integrations/all/jotform
 apollo:
     categories:
         - marketing
