--- a/.github/workflows/cli-verification.yaml
+++ b/.github/workflows/cli-verification.yaml
@@ -24,7 +24,7 @@ jobs:
 
             - uses: actions/setup-node@v4
               with:
-                  node-version: '18.x'
+                  node-version-file: '.nvmrc'
                   registry-url: 'https://npm.pkg.github.com'
                   scope: '@nangohq'
                   always-auth: true
@@ -78,7 +78,7 @@ jobs:
         steps:
             - uses: actions/setup-node@v4
               with:
-                  node-version: '18.x'
+                  node-version: '20.12.2'
                   registry-url: 'https://npm.pkg.github.com'
                   scope: '@nangohq'
                   always-auth: true
