--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,7 +18,7 @@
     },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "engines": {
-        "node": ">=16.7",
+        "node": ">=18.0",
         "npm": ">=6.14.11"
     },
     "dependencies": {
@@ -66,7 +66,7 @@
         "@types/js-yaml": "^4.0.5",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/multer": "^1.4.11",
-        "@types/node": "^18.7.6",
+        "@types/node": "20.12.2",
         "@types/node-cron": "^3.0.7",
         "@types/oauth": "^0.9.1",
         "@types/passport": "^1.0.12",
