remove shared from records tsconfig.json

--- a/packages/records/tsconfig.json
+++ b/packages/records/tsconfig.json
@@ -4,13 +4,6 @@
         "rootDir": "lib",
         "outDir": "dist"
     },
-    "references": [
-        {
-            "path": "../shared"
-        },
-        {
-            "path": "../utils"
-        }
-    ],
+    "references": [{ "path": "../utils" }],
     "include": ["lib/**/*"]
 }
