Write records to new database
This PR implements the double write to the new records database.
No reading from this db is done yet.

--- a/packages/persist/tsconfig.json
+++ b/packages/persist/tsconfig.json
@@ -4,6 +4,6 @@
         "rootDir": "lib",
         "outDir": "dist"
     },
-    "references": [{ "path": "../shared" }, { "path": "../utils" }],
+    "references": [{ "path": "../shared" }, { "path": "../utils" }, { "path": "../records" }],
     "include": ["lib/**/*"]
 }
