--- a/packages/persist/package.json
+++ b/packages/persist/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@nangohq/shared": "^0.39.18",
         "@nangohq/utils": "file:../utils",
+        "@nangohq/records": "file:../records",
         "dd-trace": "5.2.0",
         "express": "^4.19.2",
         "zod": "^3.22.4",
