--- a/packages/records/package.json
+++ b/packages/records/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "@nangohq/nango-records",
+    "name": "@nangohq/records",
     "version": "1.0.0",
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
+        "build": "rimraf ./dist && tsc",
         "dev:migration:create": "npm run knex -- migrate:make",
         "dev:migration:run": "npm run knex -- migrate:latest",
         "knex": "tsx ../../node_modules/knex/bin/cli.js --knexfile lib/db/knexfile.ts",
