chore: add temporal ui to docker-compose

--- a/dev/docker-compose.dev.yaml
+++ b/dev/docker-compose.dev.yaml
@@ -30,6 +30,18 @@ services:
         networks:
             - nango
 
+    temporal-ui:
+        image: temporalio/ui:2.26.0
+        depends_on:
+            - temporal
+        environment:
+            - TEMPORAL_ADDRESS=temporal:7233
+            - TEMPORAL_CORS_ORIGINS=http://localhost:3000
+        ports:
+            - 8081:8080
+        networks:
+            - nango
+
     nango-redis:
         image: redis:7.2.4
         container_name: nango-redis
