--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,3 +27,4 @@ jobs:
                   reporter: github-pr-review # Change reporter.
                   eslint_flags: '.'
                   level: 'error'
+                  fail_on_error: true
