try with debian

--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20.12.2-slim
+FROM node:20.12.2-bullseye-slim
 
 ENV SERVER_RUN_MODE=DOCKERIZED
 ENV NANGO_DB_MIGRATION_FOLDER=./packages/shared/lib/db/migrations
