--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -5,8 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "start": "tsc && node dist/app.js",
-        "dev": "nodemon",
-        "build": "rimraf dist && tsc"
+        "dev": "nodemon"
     },
     "keywords": [],
     "repository": {
