--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,10 +17,9 @@
     },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "scripts": {
-        "build": "tsc && npm run copyfiles",
         "copyfiles": "copyfiles -u 1 lib/templates/* dist",
-        "postbuild": "cp `node -p \"require.resolve('@nangohq/shared/dist/sdk/sync.d.ts')\"` './dist/nango-sync.d.ts'",
-        "prepublishOnly": "npm install && npm run build"
+        "copytypes": "cp `node -p \"require.resolve('@nangohq/shared/dist/sdk/sync.d.ts')\"` './dist/nango-sync.d.ts'",
+        "prepublishOnly": "npm run copyfiles && npm run copytypes"
     },
     "dependencies": {
         "@babel/parser": "^7.22.5",
