--- a/packages/node-client/package.json
+++ b/packages/node-client/package.json
@@ -6,8 +6,8 @@
     "main": "dist/index.js",
     "module": "./dist/index.js",
     "scripts": {
-        "build": "tsup lib/index.ts --format cjs && tsc",
-        "prepublishOnly": "npm install && npm run build"
+        "build": "tsup lib/index.ts --format cjs",
+        "prepublishOnly": "npm run build"
     },
     "exports": {
         ".": {
