--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -30,7 +30,7 @@ jobs:
                   # Build, install CLI and verify it can run
                   npm ci
                   npm run ts-build
-                  npm run build -w nango
+                  npm run -w nango postbuild
                   npm install -g ./packages/cli
                   NANGO_CLI_UPGRADE_MODE=ignore nango version --debug
 
